[Conversion] add lower-struct and dce passes

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_mlir_dialect_library(MLIRSparlayTransforms
   
   LowerFormatConversionPass.cpp
+  LowerStructPass.cpp
+  DeadCodeEliminationPass.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/Transforms
