create the sparlay-codegen pass interface

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -3,6 +3,7 @@ add_mlir_dialect_library(MLIRSparlayTransforms
   LowerFormatConversionPass.cpp
   LowerStructPass.cpp
   DeadCodeEliminationPass.cpp
+  SparlayCodegen.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/Transforms
