--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -7,9 +7,11 @@ add_mlir_dialect_library(MLIRSparlayTransforms
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/Transforms
+  ${PROJECT_SOURCE_DIR}/include/IR
 
   DEPENDS
   MLIRSparlayOpsIncGen
+  MLIRSparselayAttrIncGen
   MLIRSparlayTransformsIncGen
 
   LINK_LIBS PUBLIC
@@ -22,4 +24,5 @@ add_mlir_dialect_library(MLIRSparlayTransforms
   MLIRTransformUtils
   MLIRVector
   MLIRVectorToLLVM
+  MLIRSparlay
   )
