add function calls to support tiling, add testcases for functionality and performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,16 @@
         "typeinfo": "cpp",
         "bit": "cpp",
         "iostream": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "strstream": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "hash_map": "cpp",
+        "future": "cpp",
+        "cfenv": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp",
+        "variant": "cpp"
     }
 }
