Switching to llvm15, pass compilation. TODO: make all pass work

--- a/lib/IR/CMakeLists.txt
+++ b/lib/IR/CMakeLists.txt
@@ -12,5 +12,8 @@ add_mlir_dialect_library(MLIRSparlay
 
 	LINK_LIBS PUBLIC
 	MLIRIR
+        MLIRDialect
         MLIRParser
+        MLIRInferTypeOpInterface
+        MLIRSupport
 	)
