--- a/sparlay-translate/CMakeLists.txt
+++ b/sparlay-translate/CMakeLists.txt
@@ -16,8 +16,8 @@ target_link_libraries(sparlay-translate
   MLIRIR
   MLIRParser
   MLIRPass
-  MLIRSPIRV
-  MLIRTranslation
+  MLIRSPIRVDialect
+  MLIRTranslateLib
   MLIRSupport
   )
 
