--- a/lib/IR/CMakeLists.txt
+++ b/lib/IR/CMakeLists.txt
@@ -2,6 +2,7 @@ add_mlir_dialect_library(MLIRSparlay
         SparlayDialect.cpp
         SparlayOps.cpp
         SparlayTypes.cpp
+        SparlayParser.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/IR
