--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -10,6 +10,7 @@ jobs:
           - { name: "Ubuntu-clang", os: ubuntu-latest, cc: "clang", cxx: "clang++" }
 
     steps:
+    - uses: hmarr/debug-action@v2
     - name: add dependencies
       run: sudo apt-get install -y ninja-build
 
@@ -22,9 +23,7 @@ jobs:
     
     - name: Get Date
       id: get-date
-      run: |
-        echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-      shell: bash
+      run: echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
 
     - name: Cache MLIR 
       id: cache-mlir
