--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -48,7 +48,7 @@ jobs:
               -DCMAKE_BUILD_TYPE=Release -DLLVM_ENABLE_ASSERTIONS=ON \
               -DLLVM_INSTALL_UTILS=ON -DLLVM_BUILD_UTILS=ON \
               -DLLVM_USE_LINKER=lld \
-              -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ \
+              -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
             ninja -j $(nproc);
           fi;
           cd ../..
