--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: hmarr/debug-action@v2
       - name: add dependencies
         run: sudo apt-get install libeigen3-dev
+        run: ls /usr/local/include/
+        run: echo $CPATH
       #   run: sudo apt-get install -y ninja-build
       
       - name: Check out repository code
