[CI] check eigen

--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: hmarr/debug-action@v2
       - name: add dependencies
-        run: sudo apt-get install libeigen3-dev
         run: |
+          sudo apt-get install libeigen3-dev
           ls /usr/local/include/
-        run: echo $CPATH
+          echo $CPATH
       #   run: sudo apt-get install -y ninja-build
       
       - name: Check out repository code
