--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -15,8 +15,8 @@ jobs:
       - name: add dependencies
         run: |
           sudo apt-get install libeigen3-dev
-          ls /usr/local/include/
-          echo $CPATH
+      - run: ls /usr/local/include/
+      - run: echo $CPATH
       #   run: sudo apt-get install -y ninja-build
       
       - name: Check out repository code
