--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -19,6 +19,7 @@ jobs:
           wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
           tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
           export CPATH=$PWD/eigen-3.4.0:$CPATH
+          ls $PWD/eigen-3.4.0/Eigen
           echo $CPATH
       
       - name: Check out repository code
@@ -49,17 +50,24 @@ jobs:
             -DLLVM_INSTALL_UTILS=ON -DLLVM_BUILD_UTILS=ON \
             -DLLVM_USE_LINKER=lld \
             -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-          cmake --build . -j $(nproc);
+          cmake --build . -j $(nproc)
 
       - name: Build Sparlay
         run: |
           mkdir -p build
           cd build
+          export CPATH=/home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0:$PWD/../llvm-project/mlir/include:$CPATH
+          echo "🔎 ATTENTION: "
+          echo $CPATH
+          ls /home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0
           cmake .. \
             -DMLIR_DIR="$PWD/../llvm-project/build/lib/cmake/mlir" \
+            -DLLVM_DIR="$PWD/../llvm-project/build/lib/cmake/llvm" \
+            -DLLVM_BUILD_LIBRARY_DIR="$PWD/../llvm-project/build" \
             -DLLVM_EXTERNAL_LIT="$PWD/../llvm-project/build/bin/llvm-lit" \
-            -DMLIR_INCLUDE_DIRS="$PWD/../llvm-project/mlir/include" \
-            -DEXTERNAL_INCLUDE_DIRS="$PWD/../packages/eigen-3.4.0" \
+            -DLLVM_INCLUDE_DIRS="$PWD/../llvm-project/llvm/include/llvm"
+            -DMLIR_INCLUDE_DIRS="$PWD/../llvm-project/mlir/include/mlir" \
+            -DEXTERNAL_INCLUDE_DIRS="/home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0" \
             -DLLVM_ENABLE_ASSERTIONS=ON \
             -DCMAKE_BUILD_TYPE=RELEASE \
             -DLLVM_USE_LINKER=lld \
