--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -13,14 +13,14 @@ jobs:
     steps:
       - uses: hmarr/debug-action@v2
 
-      - name: add dependencies
-        run: |
-          mkdir -p packages && cd packages
-          wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
-          tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
-          export CPATH=$PWD/eigen-3.4.0:$CPATH
-          ls $PWD/eigen-3.4.0/Eigen
-          echo $CPATH
+      # - name: add dependencies
+      #   run: |
+      #     mkdir -p packages && cd packages
+      #     wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
+      #     tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
+      #     cd eigen-3.4.0/Eigen/Dense && pwd && ls
+      #     export CPATH=$PWD/eigen-3.4.0:$CPATH
+      #     echo $CPATH
       
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -36,9 +36,15 @@ jobs:
           path: llvm-project/build
           key: ${{ matrix.config.os }}-mlir-${{ steps.get-date.outputs.date }}
 
-      - name: Build MLIR
+      - name: Build MLIR and add dependencies
         if: steps.cache-mlir.outputs.cache-hit != 'true'
         run: |
+          wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
+          tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
+          cd eigen-3.4.0 && export CPATH=$PWD:$CPATH && echo $CPATH
+          echo "🔎 ATTENTION: "
+          cd Eigen/Dense && pwd && ls
+          cd ../../../
           git clone https://github.com/llvm/llvm-project.git;
           cd llvm-project
           git checkout tags/llvmorg-15.0.0-rc1
@@ -56,10 +62,9 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          export CPATH=/home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0:$PWD/../llvm-project/mlir/include:$CPATH
-          echo "🔎 ATTENTION: "
-          echo $CPATH
-          ls /home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0
+          export CPATH=$PWD/../llvm-project/mlir/include:$CPATH
+          echo "🔎 ATTENTION: " && echo $CPATH
+          ls $PWD/../eigen-3.4.0
           cmake .. \
             -DMLIR_DIR="$PWD/../llvm-project/build/lib/cmake/mlir" \
             -DLLVM_DIR="$PWD/../llvm-project/build/lib/cmake/llvm" \
@@ -67,7 +72,7 @@ jobs:
             -DLLVM_EXTERNAL_LIT="$PWD/../llvm-project/build/bin/llvm-lit" \
             -DLLVM_INCLUDE_DIRS="$PWD/../llvm-project/llvm/include/llvm"
             -DMLIR_INCLUDE_DIRS="$PWD/../llvm-project/mlir/include/mlir" \
-            -DEXTERNAL_INCLUDE_DIRS="/home/runner/work/Sparse_Layout_Dialect/Sparse_Layout_Dialect/packages/eigen-3.4.0" \
+            -DEXTERNAL_INCLUDE_DIRS="$PWD/../eigen-3.4.0" \
             -DLLVM_ENABLE_ASSERTIONS=ON \
             -DCMAKE_BUILD_TYPE=RELEASE \
             -DLLVM_USE_LINKER=lld \
