--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -77,7 +77,7 @@ jobs:
             -DLLVM_DIR="$PWD/../llvm-project/build/lib/cmake/llvm" \
             -DLLVM_BUILD_LIBRARY_DIR="$PWD/../llvm-project/build" \
             -DLLVM_EXTERNAL_LIT="$PWD/../llvm-project/build/bin/llvm-lit" \
-            -DLLVM_INCLUDE_DIRS="$PWD/../llvm-project/llvm/include"
+            -DLLVM_INCLUDE_DIRS="$PWD/../llvm-project/llvm/include" \
             -DMLIR_INCLUDE_DIRS="$PWD/../llvm-project/mlir/include" \
             -DEXTERNAL_INCLUDE_DIRS="$PWD/../eigen-3.4.0" \
             -DLLVM_ENABLE_ASSERTIONS=ON \
