add pass for decompose and struct_convert and run successfully, TODO: change the function call from copying to actual splitting

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -1,9 +1,10 @@
 add_mlir_dialect_library(MLIRSparlayTransforms
   
   LowerFormatConversionPass.cpp
-  #LowerStructPass.cpp
+  LowerStructPass.cpp
   DeadCodeEliminationPass.cpp
   SparlayCodegen.cpp
+  LowerStructConvert.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/Transforms
