--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -10,35 +10,27 @@ jobs:
         config:
           - { name: "Ubuntu-clang", os: ubuntu-latest, cc: "clang", cxx: "clang++" }
 
-    steps:
-      - uses: hmarr/debug-action@v2
-
-      # - name: add dependencies
-      #   run: |
-      #     mkdir -p packages && cd packages
-      #     wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
-      #     tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
-      #     cd eigen-3.4.0/Eigen/Dense && pwd && ls
-      #     export CPATH=$PWD/eigen-3.4.0:$CPATH
-      #     echo $CPATH
-      
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      
-      - name: Get Date
-        id: get-date
-        run: echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+    steps:    
+      # - name: Get LLVM Hash
+      #   id: get-llvm-hash
+      #   run: echo "::set-output name=hash::$(git -C ./polygeist rev-parse @:./llvm-project)"
 
       - name: Cache MLIR 
         id: cache-mlir
         uses: actions/cache@v3
+        env:
+          cache-name: cache-llvm-build
         with:
-          path: llvm-project/build
-          key: ${{ matrix.config.os }}-mlir-${{ steps.get-date.outputs.date }}
+          path: ~/llvm-project/build
+          key: ${{ matrix.config.os }}-${{ env.cache-name }}-${{ hashFiles('~/llvm-project') }}
+          restore-keys: |
+            ${{ matrix.config.os }}-${{ env.cache-name }}-
+            ${{ matrix.config.os }}-
 
       - name: Build MLIR and add dependencies
         if: steps.cache-mlir.outputs.cache-hit != 'true'
         run: |
+          cd ~
           wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
           tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
           echo "🔎 cd eigen-3.4.0 && ls: "
@@ -47,8 +39,8 @@ jobs:
           export CPATH=$PWD:$CPATH && echo $CPATH
           echo "🔎 cd $PWD/Eigen && pwd && ls: "
           cd $PWD/Eigen && pwd && ls
-          echo "🔎 cd ../../ && ls: "
-          cd ../../ && ls
+          echo "🔎 cd ../../ && pwd && ls: "
+          cd ../../ && pwd && ls
           git clone https://github.com/llvm/llvm-project.git;
           cd llvm-project && git checkout tags/llvmorg-15.0.0-rc1
           mkdir -p build && cd build
@@ -61,39 +53,31 @@ jobs:
             -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
           cmake --build . -j $(nproc)
 
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
       - name: Build Sparlay
         run: |
           mkdir -p build && cd build
-          export CPATH=$PWD/../eigen-3.4.0:$PWD/../llvm-project/mlir/lib:$CPATH
-          export CPATH=$PWD/../llvm-project/mlir/include/mlir:$CPATH
+          export CPATH=~/eigen-3.4.0:~/llvm-project/mlir/lib:$CPATH
+          export CPATH=~/llvm-project/mlir/include/mlir:$CPATH
           echo "🔎 CPATH: " && echo $CPATH
-          echo "🔎 $PWD/../llvm-project/mlir/include: "
-          ls $PWD/../llvm-project/mlir/include
-          echo "🔎 $PWD/../llvm-project/llvm/include: "
-          ls $PWD/../llvm-project/llvm/include
-          echo "🔎 $PWD/../eigen-3.4.0: "
-          ls $PWD/../eigen-3.4.0
+          echo "🔎 ~/llvm-project/mlir/include: "
+          ls ~/llvm-project/mlir/include
+          echo "🔎 ~/llvm-project/llvm/include: "
+          ls ~/llvm-project/llvm/include
+          echo "🔎 ~/eigen-3.4.0: "
+          ls ~/eigen-3.4.0
           cmake .. \
-            -DMLIR_DIR="$PWD/../llvm-project/build/lib/cmake/mlir" \
-            -DLLVM_DIR="$PWD/../llvm-project/build/lib/cmake/llvm" \
-            -DLLVM_BUILD_LIBRARY_DIR="$PWD/../llvm-project/build" \
-            -DLLVM_EXTERNAL_LIT="$PWD/../llvm-project/build/bin/llvm-lit" \
-            -DEXTERNAL_INCLUDE_DIRS="$PWD/../eigen-3.4.0" \
-            -DMLIR_LIB_DIR="$PWD/../llvm-project/mlir/lib" \
+            -DMLIR_DIR="~/llvm-project/build/lib/cmake/mlir" \
+            -DLLVM_DIR="~/llvm-project/build/lib/cmake/llvm" \
+            -DLLVM_BUILD_LIBRARY_DIR="~/llvm-project/build" \
+            -DLLVM_EXTERNAL_LIT="~/llvm-project/build/bin/llvm-lit" \
+            -DEXTERNAL_INCLUDE_DIRS="~/eigen-3.4.0" \
+            -DMLIR_LIB_DIR="~/llvm-project/mlir/lib" \
             -DLLVM_ENABLE_ASSERTIONS=ON \
             -DCMAKE_BUILD_TYPE=RELEASE \
             -DLLVM_USE_LINKER=lld \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++
           cmake --build . -j $(nproc)
-      # - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      # - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      # - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      # - name: Check out repository code
-      #   uses: actions/checkout@v3
-      # - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      # - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      # - name: List files in the repository
-      #   run: |
-      #     ls ${{ github.workspace }}
-      # - run: echo "🍏 This job's status is ${{ job.status }}."
