--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -11,20 +11,18 @@ jobs:
           - { name: "Ubuntu-clang", os: ubuntu-latest, cc: "clang", cxx: "clang++" }
 
     steps:    
-      # - name: Get LLVM Hash
-      #   id: get-llvm-hash
-      #   run: echo "::set-output name=hash::$(git -C ./polygeist rev-parse @:./llvm-project)"
-
       - name: Cache MLIR 
         id: cache-mlir
         uses: actions/cache@v3
         env:
           cache-name: cache-llvm-build
         with:
-          path: ~/llvm-project/build
-          key: ${{ matrix.config.os }}-${{ env.cache-name }}-${{ hashFiles('~/llvm-project') }}
+          path: |
+            ~/llvm-project/
+            ~/eigen-3.4.0/
+          key: ${{ matrix.config.os }}-${{ env.cache-name }}
           restore-keys: |
-            ${{ matrix.config.os }}-${{ env.cache-name }}-
+            ${{ matrix.config.os }}-${{ env.cache-name }}
             ${{ matrix.config.os }}-
 
       - name: Build MLIR and add dependencies
@@ -33,14 +31,6 @@ jobs:
           cd ~
           wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
           tar -xzf eigen-3.4.0.tar.gz && rm eigen-3.4.0.tar.gz
-          echo "🔎 cd eigen-3.4.0 && ls: "
-          cd eigen-3.4.0 && ls
-          echo "🔎 CPATH: "
-          export CPATH=$PWD:$CPATH && echo $CPATH
-          echo "🔎 cd $PWD/Eigen && pwd && ls: "
-          cd $PWD/Eigen && pwd && ls
-          echo "🔎 cd ../../ && pwd && ls: "
-          cd ../../ && pwd && ls
           git clone https://github.com/llvm/llvm-project.git;
           cd llvm-project && git checkout tags/llvmorg-15.0.0-rc1
           mkdir -p build && cd build
@@ -59,23 +49,15 @@ jobs:
       - name: Build Sparlay
         run: |
           mkdir -p build && cd build
-          export CPATH=$PWD/../../../eigen-3.4.0:~/llvm-project/mlir/lib:$CPATH
+          export CPATH=~/eigen-3.4.0:~/llvm-project/mlir/lib:$CPATH
           export CPATH=~/llvm-project/mlir/include/mlir:$CPATH
-          echo "🔎 CPATH: " && echo $CPATH
-          echo "🔎 ls ~ : "
-          ls ~  
-          echo "🔎 ls ~/llvm-project/build: "
-          ls ~/llvm-project/build 
-          echo "🔎 find ~ -name eigen: "
-          find ~ -name "eigen*"
-          echo "🔎 $PWD/../../../eigen-3.4.0: "
-          ls $PWD/../../../eigen-3.4.0
+          echo "🔎 ls ~ " && ls ~
           cmake .. \
             -DMLIR_DIR="~/llvm-project/build/lib/cmake/mlir" \
             -DLLVM_DIR="~/llvm-project/build/lib/cmake/llvm" \
             -DLLVM_BUILD_LIBRARY_DIR="~/llvm-project/build" \
             -DLLVM_EXTERNAL_LIT="~/llvm-project/build/bin/llvm-lit" \
-            -DEXTERNAL_INCLUDE_DIRS="$PWD/../../../eigen-3.4.0" \
+            -DEXTERNAL_INCLUDE_DIRS="~/eigen-3.4.0" \
             -DMLIR_LIB_DIR="~/llvm-project/mlir/lib" \
             -DLLVM_ENABLE_ASSERTIONS=ON \
             -DCMAKE_BUILD_TYPE=RELEASE \
