add the MKL and cuSPARSE baseline of SpMV, SpMM, SpMSpV and SpGEMM using CSR input

--- a/evaluation/CPU/Makefile
+++ b/evaluation/CPU/Makefile
@@ -4,8 +4,11 @@
 # GBLAS_INCLUDE_DIR=/home/ubuntu/project/GraphBLAS/include
 # GBLAS_LIBRARY_DIR=/home/ubuntu/project/GraphBLAS/lib
 
-MKL_INCLUDE_DIR=/work/shared/common/CAD_tool/Intel/mkl/mkl/include
-MKL_LIBRARY_DIR=/work/shared/common/CAD_tool/Intel/mkl/mkl/lib/intel64
+#MKL_INCLUDE_DIR=/work/shared/common/CAD_tool/Intel/mkl/mkl/include
+#MKL_LIBRARY_DIR=/work/shared/common/CAD_tool/Intel/mkl/mkl/lib/intel64
+
+MKL_INCLUDE_DIR=/opt/intel/oneapi/mkl/2022.0.2/include
+MKL_LIBRARY_DIR=/opt/intel/oneapi/mkl/2022.0.2/lib/intel64
 
 # CNPY_INCLUDE_DIR=/work/shared/common/project_build/graphblas/software/cnpy
 # CNPY_LIBRARY_DIR=/work/shared/common/project_build/graphblas/software/cnpy/build
@@ -24,6 +27,7 @@ BUILD_DIR=./build
 mkl_spmm: mkl_spmm.cpp
 	mkdir -p $(BUILD_DIR)
 	g++ -std=c++11 -O3 -I${MKL_INCLUDE_DIR} \
+		${CXXFLAGS} \
 		-Wl,--no-as-needed \
 		mkl_spmm.cpp -o $(BUILD_DIR)/mkl_spmm \
 		-Wl,--start-group ${MKL_LIBRARY_DIR}/libmkl_intel_lp64.a \
@@ -33,11 +37,41 @@ mkl_spmm: mkl_spmm.cpp
 mkl_spmv: mkl_spmv.cpp
 	mkdir -p $(BUILD_DIR)
 	g++ -std=c++11 -O3 -I${MKL_INCLUDE_DIR} \
+		${CXXFLAGS} \
 		-Wl,--no-as-needed \
 		mkl_spmv.cpp -o $(BUILD_DIR)/mkl_spmv \
 		-Wl,--start-group ${MKL_LIBRARY_DIR}/libmkl_intel_lp64.a \
 		${MKL_LIBRARY_DIR}/libmkl_core.a ${MKL_LIBRARY_DIR}/libmkl_gnu_thread.a -Wl,--end-group \
 		-fopenmp -lpthread -lm -ldl 
+
+mkl_spgemm: mkl_spgemm.cpp
+	mkdir -p $(BUILD_DIR)
+	g++ -std=c++11 -O3 -I${MKL_INCLUDE_DIR} \
+				${CXXFLAGS} \
+                -Wl,--no-as-needed \
+                mkl_spgemm.cpp -o $(BUILD_DIR)/mkl_spgemm \
+                -Wl,--start-group ${MKL_LIBRARY_DIR}/libmkl_intel_lp64.a \
+                ${MKL_LIBRARY_DIR}/libmkl_core.a ${MKL_LIBRARY_DIR}/libmkl_gnu_thread.a -Wl,--end-group \
+                -fopenmp -lpthread -lm -ldl
+
+mkl_spmspv: mkl_spmspv.cpp
+	mkdir -p $(BUILD_DIR)
+	g++ -std=c++11 -O3 -I${MKL_INCLUDE_DIR} \
+                -Wl,--no-as-needed \
+                mkl_spmspv.cpp -o $(BUILD_DIR)/mkl_spmspv \
+                -Wl,--start-group ${MKL_LIBRARY_DIR}/libmkl_intel_lp64.a \
+                ${MKL_LIBRARY_DIR}/libmkl_core.a ${MKL_LIBRARY_DIR}/libmkl_gnu_thread.a -Wl,--end-group \
+                -fopenmp -lpthread -lm -ldl
+
+mkl_spgemm_lp: mkl_spgemm_lp.cpp
+	mkdir -p $(BUILD_DIR)
+	g++ -std=c++11 -O3 -I${MKL_INCLUDE_DIR} \
+				${CXXFLAGS} \
+                -Wl,--no-as-needed \
+                mkl_spgemm_lp.cpp -o $(BUILD_DIR)/mkl_spgemm_lp \
+                -Wl,--start-group ${MKL_LIBRARY_DIR}/libmkl_intel_lp64.a \
+                ${MKL_LIBRARY_DIR}/libmkl_core.a ${MKL_LIBRARY_DIR}/libmkl_gnu_thread.a -Wl,--end-group \
+                -fopenmp -lpthread -lm -ldl
 
 clean:
 	rm -rf ${BUILD_DIR}
