--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -65,3 +65,7 @@ jobs:
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++
           cmake --build . -j $(nproc)
+
+      - name: Check Sparlay
+        run: |
+          ninja check-sparlay
