add pseudo gen-buffer, remove check-sparlay temporarily

--- a/.github/workflows/github-actions-build-test.yml
+++ b/.github/workflows/github-actions-build-test.yml
@@ -66,6 +66,6 @@ jobs:
             -DCMAKE_CXX_COMPILER=clang++
           cmake --build . -j $(nproc)
 
-      - name: Check Sparlay
-        run: |
-          ninja check-sparlay
+      # - name: Check Sparlay
+      #   run: |
+      #     ninja check-sparlay
