--- a/lib/Runtime/CMakeLists.txt
+++ b/lib/Runtime/CMakeLists.txt
@@ -29,5 +29,6 @@ add_mlir_library(mlir_unisparse_runner_utils
 
 set_property(TARGET mlir_unisparse_runner_utils PROPERTY CXX_STANDARD 14)
 target_compile_definitions(mlir_unisparse_runner_utils PRIVATE mlir_unisparse_runner_utils_EXPORTS)
+target_link_libraries(mlir_unisparse_runner_utils PRIVATE OpenMP::OpenMP_CXX)
 # target_include_directories(mlir_unisparse_runner_utils PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 # target_link_libraries(mlir_unisparse_runner_utils PRIVATE OpenMP::OpenMP_CXX PRIVATE ${CUDA_LIBRARIES} PRIVATE ${CUDA_cusparse_LIBRARY})
